# ask-me-skattabc

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  fly.toml  launch.json  next.config.js  notes.md  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
.claude/: elasticsearch-troubleshooting-session.md
.github/workflows/: deploy-elasticsearch.yml  deploy-skattabc.yml  main.yml  migrate-database.yml  postgres-migrations.yml  test.yml
app/: globals.css  layout.tsx  page.tsx
app/bruker/: layout.tsx  page.tsx
app/components/: ModelSelectDropdown.tsx  esPingHealth.tsx  gptResponseDisplay.tsx  historyDropdownSelect.tsx.tsx  markdownTextDisplay.tsx  navbar.tsx  paragraphsDisplay.tsx  rangeBar.tsx  renderHTML.tsx  searchBar.tsx  textBar.tsx  themeController.tsx  toogleModelDepth.tsx
app/constants/: esParameters.ts
app/constants.ts/: esParameters.ts  opanAiParameters.ts
app/consumers/: esSearch.ts  esSearch.tsx  esSearchConsumer.ts  openAi.ts  openAi.tsx  openAiConsumer.ts  (+1 more)
db-postgres/: README.md  podman-compose.yml
elasticsearch/: .dockerignore  Dockerfile  docker-compose.yaml  docker-run  fly.toml  podman-compose.yml
elasticsearch-new/: Dockerfile  fly.toml
elasticsearch/notebook_client/: pyproject.toml
elasticsearch/notebook_client/notebooks/examples/: SkatteABC-mistral-RAG.ipynb  azure-ai-search-games.ipynb  elasticsearch-games-hotload.ipynb  elasticsearch-games-openai.ipynb  elasticsearch-skatteabc-paragrafer-azure.ipynb  ingest json index.ipynb
elasticsearch/notebook_client/notebooks/examples/.ipynb_checkpoints/: azure-ai-search-checkpoint.ipynb  azure-ai-search-games-checkpoint.ipynb  elasticsearch-checkpoint.ipynb  llama-index-checkpoint.ipynb
postgres/: Dockerfile  README.md  docker-compose.yml  docker-run  fly.toml
prisma/: schema.prisma
tests/: mockData.ts
(+66 files in other folders)
