[tool.poetry]
name = "data_processing"
version = "0.1.0"
description = ""
authors = ["Eirik Kjærnli <eirik.kjarnli@gmail.com>"]
packages = [{include = "data_processing"}]

[tool.poetry.dependencies]
python = "^3.11"
msal = "^1.26.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
pyyaml = "^6.0.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
openai = "^1.10.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.1"
azure-common = "^1.1.28"
azure-identity = "^1.15.0"
azure-search-documents = "11.4.0"
azure-core = "^1.30.0"
azure-storage-blob = "^12.19.0"
cryptography = "^42.0.2"
requests = "^2.31.0"
langchain = "^0.1.5"
langchain-openai = "^0.0.5"
psycopg2 = "^2.9.9"
docx2txt = "^0.8"
async-sqlalchemy = "^1.0.0"
pgvector = "^0.2.5"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
llama-index = "^0.10.27"
llama-index-embeddings-azure-openai = "^0.1.6"
llama-index-llms-azure-openai = "^0.1.5"
llama-index-vector-stores-elasticsearch = "^0.1.6"
llama-index-embeddings-ollama = "^0.1.2"
llama-index-llms-ollama = "^0.1.2"
sentence-transformers = "^2.7.0"
sentencepiece = "^0.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pylint = "^3.0.3"
pre-commit = "^2.20.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[tool.ruff]
line-length = 100
extend-ignore = ["E203", "D107"]

[tool.ruff.lint]
select = ["E", "W", "D", "F", "UP", "B", "SIM","I"]

[tool.ruff.lint.isort]
known-first-party = ["data_processing"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["python_package"]

[tool.pylint]
max-line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
